--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230518.0",
     "@tailwindcss/typography": "^0.5.9",
-    "daisyui": "^2.51.6",
-    "wrangler": "^3.0.1"
+    "daisyui": "^2.51.6"
   }
 }
